--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -473,6 +473,9 @@ body {
 	margin-top : -20px;
 	width      : 40px;
 	height     : 40px;
+	background-color: #524231;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
 }
 
 .li-gradient-overlay {
