--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8850,25 +8850,39 @@ body {
 /* GENERAL CLASSES */
 /* line 140, ../sass/app.scss */
 .title {
-  letter-spacing: 10px;
+  letter-spacing: 5px;
+  font-size: 30px;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
   -ms-transition: all 0.1s ease-in-out;
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
+@media (min-width: 768px) {
+  /* line 140, ../sass/app.scss */
+  .title {
+    font-size: 36px;
+  }
+}
 
-/* line 145, ../sass/app.scss */
+/* line 151, ../sass/app.scss */
 .sub-title {
-  letter-spacing: 3px;
+  letter-spacing: 1px;
+  font-size: 23px;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
   -ms-transition: all 0.1s ease-in-out;
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
+@media (min-width: 768px) {
+  /* line 151, ../sass/app.scss */
+  .sub-title {
+    font-size: 30px;
+  }
+}
 
-/* line 150, ../sass/app.scss */
+/* line 162, ../sass/app.scss */
 .description {
   font-size: 16px;
   padding: 0 10px;
@@ -8879,7 +8893,7 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 156, ../sass/app.scss */
+/* line 168, ../sass/app.scss */
 .reset-btn {
   position: fixed;
   bottom: 2%;
@@ -8898,11 +8912,11 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 174, ../sass/app.scss */
+/* line 186, ../sass/app.scss */
 .reset-btn:active {
   opacity: .8;
 }
-/* line 178, ../sass/app.scss */
+/* line 190, ../sass/app.scss */
 .reset-btn i {
   margin: 0;
   padding: 0;
@@ -8910,13 +8924,13 @@ body {
   top: 2px;
 }
 
-/* line 186, ../sass/app.scss */
+/* line 198, ../sass/app.scss */
 .gmap {
   width: 100%;
   height: 40%;
 }
 
-/* line 191, ../sass/app.scss */
+/* line 203, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 2%;
@@ -8935,12 +8949,12 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 209, ../sass/app.scss */
+/* line 221, ../sass/app.scss */
 .fire-btn:active {
   opacity: .8;
 }
 
-/* line 214, ../sass/app.scss */
+/* line 226, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8956,7 +8970,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 229, ../sass/app.scss */
+/* line 241, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8973,17 +8987,17 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 245, ../sass/app.scss */
+/* line 257, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 249, ../sass/app.scss */
+/* line 261, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 254, ../sass/app.scss */
+/* line 266, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
@@ -8991,14 +9005,14 @@ body {
   overflow: hidden;
 }
 @media (min-width: 768px) {
-  /* line 254, ../sass/app.scss */
+  /* line 266, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 267, ../sass/app.scss */
+/* line 279, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -9006,7 +9020,7 @@ body {
   padding: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 267, ../sass/app.scss */
+  /* line 279, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9015,7 +9029,7 @@ body {
     display: inline-block;
   }
 }
-/* line 281, ../sass/app.scss */
+/* line 293, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9033,21 +9047,21 @@ body {
   transition: all 0.2s ease-out;
 }
 @media (min-width: 768px) {
-  /* line 297, ../sass/app.scss */
+  /* line 309, ../sass/app.scss */
   .park-nav ul li p {
     padding: 5px 40px 5px 10%;
   }
-  /* line 301, ../sass/app.scss */
+  /* line 313, ../sass/app.scss */
   .park-nav ul li:nth-child(1n) {
     text-align: right;
   }
-  /* line 304, ../sass/app.scss */
+  /* line 316, ../sass/app.scss */
   .park-nav ul li:nth-child(2n) {
     text-align: left;
   }
 }
 
-/* line 312, ../sass/app.scss */
+/* line 324, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -9056,20 +9070,20 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 315, ../sass/app.scss */
+/* line 327, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 318, ../sass/app.scss */
+/* line 330, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 322, ../sass/app.scss */
+/* line 334, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 327, ../sass/app.scss */
+/* line 339, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9085,7 +9099,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 338, ../sass/app.scss */
+/* line 350, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 72%;
@@ -9095,25 +9109,25 @@ body {
   background-color: #fff;
 }
 
-/* line 347, ../sass/app.scss */
+/* line 359, ../sass/app.scss */
 .park-list-container {
   position: relative;
   width: 100%;
 }
 
-/* line 352, ../sass/app.scss */
+/* line 364, ../sass/app.scss */
 .park-distance-ul {
   overflow: hidden;
   width: 100%;
   height: 76px;
 }
 @media all and (min-width: 768px) {
-  /* line 352, ../sass/app.scss */
+  /* line 364, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 }
-/* line 361, ../sass/app.scss */
+/* line 373, ../sass/app.scss */
 .park-distance-ul ul {
   margin: 0;
   padding: 0;
@@ -9122,12 +9136,12 @@ body {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 361, ../sass/app.scss */
+  /* line 373, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 372, ../sass/app.scss */
+/* line 384, ../sass/app.scss */
 .park-distance-ul ul li {
   list-style: none;
   position: relative;
@@ -9146,7 +9160,7 @@ body {
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-/* line 386, ../sass/app.scss */
+/* line 398, ../sass/app.scss */
 .park-distance-ul ul li:hover {
   opacity: .7;
   -webkit-transition: all 0.1s ease-in-out;
@@ -9155,7 +9169,7 @@ body {
   -o-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
 }
-/* line 391, ../sass/app.scss */
+/* line 403, ../sass/app.scss */
 .park-distance-ul ul li .number {
   font-size: 20px;
   display: inline-block;
@@ -9166,17 +9180,17 @@ body {
   color: #524231;
 }
 
-/* line 404, ../sass/app.scss */
+/* line 416, ../sass/app.scss */
 .park-selected {
   opacity: .5;
 }
 
-/* line 408, ../sass/app.scss */
+/* line 420, ../sass/app.scss */
 .park-selected-official {
   border: 6px solid #524231 !important;
 }
 
-/* line 412, ../sass/app.scss */
+/* line 424, ../sass/app.scss */
 .number-overlay {
   font-size: 62px;
   display: inline-block;
@@ -9195,30 +9209,30 @@ body {
   transform: scale(0.5, 0.5);
 }
 
-/* line 426, ../sass/app.scss */
+/* line 438, ../sass/app.scss */
 .park-info-cont {
   padding: 0;
   margin: 0;
 }
-/* line 430, ../sass/app.scss */
+/* line 442, ../sass/app.scss */
 .park-info-cont li {
   display: block;
   white-space: nowrap;
 }
 
-/* line 436, ../sass/app.scss */
+/* line 448, ../sass/app.scss */
 .park-images-ul {
   overflow: hidden;
   width: 100%;
   height: 125px;
 }
 @media all and (min-width: 768px) {
-  /* line 436, ../sass/app.scss */
+  /* line 448, ../sass/app.scss */
   .park-images-ul {
     height: auto;
   }
 }
-/* line 445, ../sass/app.scss */
+/* line 457, ../sass/app.scss */
 .park-images-ul ul {
   margin: 0;
   padding: 0;
@@ -9227,22 +9241,22 @@ body {
   padding-bottom: 17px;
 }
 @media all and (min-width: 768px) {
-  /* line 445, ../sass/app.scss */
+  /* line 457, ../sass/app.scss */
   .park-images-ul ul {
     padding-bottom: 0;
   }
 }
-/* line 456, ../sass/app.scss */
+/* line 468, ../sass/app.scss */
 .park-images-ul ul li {
   display: inline-block;
   padding-right: 5px;
 }
-/* line 460, ../sass/app.scss */
+/* line 472, ../sass/app.scss */
 .park-images-ul ul li img {
   height: 125px;
 }
 
-/* line 467, ../sass/app.scss */
+/* line 479, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9257,7 +9271,7 @@ body {
   -webkit-border-radius: 50%;
 }
 
-/* line 481, ../sass/app.scss */
+/* line 493, ../sass/app.scss */
 .li-gradient-overlay {
   position: absolute;
   top: 0;
@@ -9266,30 +9280,50 @@ body {
   bottom: 0;
 }
 
-/* line 489, ../sass/app.scss */
+/* line 501, ../sass/app.scss */
 .chosen-park-list {
   position: fixed;
   top: auto;
+  display: none;
   left: auto;
-  right: 2%;
+  right: 0;
   bottom: 80px;
-  background-color: white;
-  opacity: .8;
+  background: rgba(255, 255, 255, 0);
+  background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.83) 48%, white 58%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(48%, rgba(255, 255, 255, 0.83)), color-stop(58%, white));
+  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.83) 48%, white 58%);
+  background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.83) 48%, white 58%);
+  background: -ms-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.83) 48%, white 58%);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.83) 48%, white 58%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 );
+  opacity: .9;
 }
-/* line 498, ../sass/app.scss */
+@media (min-width: 768px) {
+  /* line 501, ../sass/app.scss */
+  .chosen-park-list {
+    right: 2%;
+  }
+}
+/* line 523, ../sass/app.scss */
 .chosen-park-list ul {
   padding: 0;
   margin: 0;
-  padding: 10px 0 10px 10px;
+  padding: 10px 10px 10px 40px;
 }
-/* line 503, ../sass/app.scss */
+@media (min-width: 768px) {
+  /* line 523, ../sass/app.scss */
+  .chosen-park-list ul {
+    padding: 10px 0 10px 40px;
+  }
+}
+/* line 533, ../sass/app.scss */
 .chosen-park-list ul li {
   text-align: right;
   list-style: none;
   color: #524231;
 }
 
-/* line 511, ../sass/app.scss */
+/* line 541, ../sass/app.scss */
 footer {
   color: #71e271;
   font-size: 10px;
@@ -9297,7 +9331,7 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 523, ../sass/app.scss */
+/* line 553, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9307,7 +9341,7 @@ footer {
   opacity: 0;
 }
 
-/* line 528, ../sass/app.scss */
+/* line 558, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9317,18 +9351,18 @@ footer {
   opacity: 1;
 }
 
-/* line 533, ../sass/app.scss */
+/* line 563, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 537, ../sass/app.scss */
+/* line 567, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
 /* ANIMATION SPECIFIC */
-/* line 547, ../sass/app.scss */
+/* line 577, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9337,7 +9371,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 551, ../sass/app.scss */
+/* line 581, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9346,7 +9380,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 555, ../sass/app.scss */
+/* line 585, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9355,7 +9389,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 559, ../sass/app.scss */
+/* line 589, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9364,7 +9398,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 563, ../sass/app.scss */
+/* line 593, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
@@ -9373,7 +9407,7 @@ footer {
   animation: slideAni 0.5s forwards;
 }
 
-/* line 567, ../sass/app.scss */
+/* line 597, ../sass/app.scss */
 .number-zoom {
   -webkit-animation: numberZoomAni 1s forwards;
   -moz-animation: numberZoomAni 1s forwards;
@@ -9386,7 +9420,7 @@ footer {
   animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
 
-/* line 575, ../sass/app.scss */
+/* line 605, ../sass/app.scss */
 .fade-in-and-up {
   -webkit-animation: fadeInAndUp 1s forwards;
   -moz-animation: fadeInAndUp 1s forwards;
@@ -9395,7 +9429,7 @@ footer {
   animation: fadeInAndUp 1s forwards;
 }
 
-/* line 579, ../sass/app.scss */
+/* line 609, ../sass/app.scss */
 .li-click {
   -webkit-animation: liButtonClick 0.5s forwards;
   -moz-animation: liButtonClick 0.5s forwards;
@@ -9408,7 +9442,7 @@ footer {
   transform: perspective(200px) translateZ(0);
 }
 
-/* line 587, ../sass/app.scss */
+/* line 617, ../sass/app.scss */
 .li-click-text {
   -webkit-animation: liButtonClickText 1s forwards;
   -moz-animation: liButtonClickText 1s forwards;
